# mailing_management_service

./: .env_sample  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0006_blog.py  0007_alter_blog_is_published.py  0008_version.py  0009_product_owner.py  0010_delete_blog.py  0011_alter_product_options_product_is_active.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_list.html  category_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/main/: base.html  contacts.html  home.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
json_data/: auth.json  blog.json  products.json  users.json  versions.json
project/: pyproject.toml
project/catalog/: models.py  urls.py  views.py
project/catalog/migrations/: 0004_alter_product_category.py  0005_alter_product_created_at_alter_product_updated_at.py
project/config/: settings.py
project/json_data/: categories.json  products.json
users/: forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_phone_number.py  0003_user_token.py
(+13 files in other folders)
